// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`joins will select implicit joined values 1`] = `
	select
	  \`Foo\`.\`name\` as \`name\`
	from
	  \`Bar\`
	  left join \`Foo\` on \`Foo\`.\`id\` = \`Bar\`.\`fooId\`
`;

exports[`joins will select joined values 1`] = `
	select
	  \`Foo\`.\`name\` as \`fooValue\`,
	  \`Bar\`.\`name\` as \`barValue\`,
	  \`Baz\`.\`rating\` as \`bazRating\`
	from
	  \`Foo\`
	  inner join \`Bar\` on \`Bar\`.\`color\` = \`Foo\`.\`color\`
	  left join \`Baz\` on \`Baz\`.\`rating\` = \`Bar\`.\`rating\`
	where
	  \`Foo\`.\`name\` <> 'Danny'
	  and \`Bar\`.\`rating\` > 50
`;

exports[`sort will add multiple clauses 1`] = `
	select
	  \`Test\`.\`name\` as \`name\`
	from
	  \`Test\`
	order by
	  \`Test\`.\`rating\` asc,
	  \`Test\`.\`name\` asc
`;

exports[`sort will add order clause 1`] = `
	select
	  \`Test\`.\`name\` as \`name\`
	from
	  \`Test\`
	order by
	  \`Test\`.\`id\` asc
`;

exports[`sort will sort by joined table 1`] = `
	select
	  \`Test\`.\`name\` as \`name\`
	from
	  \`Test\`
	  inner join \`Other\` on \`Other\`.\`name\` = \`Test\`.\`name\`
	order by
	  \`Other\`.\`rank\` asc
`;

exports[`where.get will select a entire entity 1`] = `
	select
	  \`Foo\`.\`bar\` as \`bar\`,
	  \`Foo\`.\`baz\` as \`baz\`
	from
	  \`Foo\`
`;

exports[`where.get will select a field directly 1`] = `
	select
	  \`Foo\`.\`bar\` as \`bar\`
	from
	  \`Foo\`
`;

exports[`where.get will select via map function 1`] = `
	select
	  \`Foo\`.\`bar\` as \`1\`,
	  \`Foo\`.\`baz\` as \`2\`
	from
	  \`Foo\`
`;

exports[`where.get will select via object 1`] = `
	select
	  \`Foo\`.\`bar\` as \`bar\`,
	  \`Foo\`.\`baz\` as \`baz\`
	from
	  \`Foo\`
`;

exports[`where.one will limit results 1`] = `
	select
	  \`Foo\`.\`bar\` as \`bar\`,
	  \`Foo\`.\`baz\` as \`baz\`
	from
	  \`Foo\`
	limit
	  1
`;
